lintian (2.5.27) UNRELEASED; urgency=medium

  XXX: generate tag summary with private/generate-tag-summary

  * checks/source-copyright.pm:
    + [BR] Fix False positive for space-in-std-shortname-in-dep5-copyright
      with alternative licenses.  (Closes: #760642).
  * data/fields/metapackages:
    + [BR] Add qt4-default and qt5-default as metapackage.
      (Closes: #756158).

 -- Niels Thykier <niels@thykier.net>  Sat, 06 Sep 2014 11:03:11 +0200

lintian (2.5.26) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - backports-changes-missing
      - backports-upload-has-incorrect-version-number
      - debian-upstream-obsolete-path
      - description-is-pkg-name
      - description-too-short
      - desktop-mime-but-no-exec-code
      - empty-short-license-in-dep5-copyright
      - file-without-copyright-information
      - invalid-escape-sequence-in-dep5-copyright
      - invalid-short-name-in-dep5-copyright
      - license-problem-bad-php-license
      - license-problem-php-license
      - license-problem-undefined-license
      - no-dep5-copyright
      - package-contains-timestamped-gzip
      - pipe-symbol-used-as-license-disjunction
      - privacy-breach-may-use-debian-package
      - source-contains-autogenerated-visual-c++-file
      - space-in-std-shortname-in-dep5-copyright
      - unused-file-paragraph-in-dep5-copyright
      - wildcard-matches-nothing-in-dep5-copyright
    + Removed:
      - copyright-refers-to-bad-php-license
      - copyright-refers-to-problematic-php-license

  * checks/binaries.{desc,pm}:
    + [NT] Apply patch from Damyan Ivanov to handle the new
      Perl5 library path location.
  * checks/changes-file.{desc,pm}:
    + [BR] Add patch from Ivo De Decker, add check for
      backports changes file.  (Closes: #732225).
    + [BR] Apply patch from Tomasz Bucher, add check for
      for timestamped gzip files.  (Closes: #738591).
  * checks/cruft.{desc,pm}: