@@ -185,6 +185,13 @@ Info: The maintainer address includes localhost(.localdomain), which is
  an invalid e-mail address.
 Ref: policy 5.6.2
 
+Tag: maintainer-address-is-root-user
+Severity: important
+Certainty: certain
+Info: The maintainer address includes root user, which is
+ invalid. This might idicate that the package
+ was not built in a sane environment.
+
 Tag: maintainer-address-causes-mail-loops-or-bounces
 Severity: serious
 Certainty: certain
@@ -224,6 +231,13 @@ Certainty: certain
 Info: The uploader address includes localhost(.localdomain), which is
  an invalid e-mail address.
 Ref: policy 5.6.3
+
+Tag: uploader-address-is-root-user
+Severity: important
+Certainty: certain
+Info: The uploader address includes root user, which is
+ invalid. This might idicate that the package
+ was not built in a sane environment.
 
 Tag: uploader-address-causes-mail-loops-or-bounces
 Severity: serious
