@@ -1,0 +1,5 @@
+Testname: changed-by-root-email
+Sequence: 6000
+Version: 1.0
+Description: Test Changed-By field with root user
+Test-For: changed-by-address-is-root-user
