@@ -1,0 +1,16 @@
+Source: {$source}
+Priority: extra
+Section: devel
+Maintainer: root <someone@debian.org>
+Uploader: John Doe <root@debian.org>
+Standards-Version: {$standards_version}
+Build-Depends: debhelper (>= 9)
+
+Package: {$source}
+Architecture: all
+Depends: $\{misc:Depends\},
+Description: {$description}
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.  It may
+ be an empty package.
