@@ -1,0 +1,3 @@
+E: fields-root-maint-address changes: changed-by-address-is-root-user root <someone@debian.org>
+E: fields-root-maint-address source: maintainer-address-is-root-user root <someone@debian.org>
+E: fields-root-maint-address: maintainer-address-is-root-user root <someone@debian.org>
